--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,19 @@
 language: node_js
+cache:
+  directories:
+    - node_modules
+notifications:
+  email: false
 node_js:
-  - "4"
-  - "5"
-  - "6"
+  - '6'
+  - '5'
+  - '4'
+before_script:
+  - npm prune
+after_success:
+  - npm run semantic-release
+branches:
+  except:
+    - /^v\d+\.\d+\.\d+$/
 before_install:
   - if [[ `npm -v` != 3* ]]; then npm i -g npm@latest; fi
