--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "istanbul-cobertura-badger": "^1.2.1",
     "jasmine": "^2.5.2",
     "mocha": "^3.2.0",
-    "standard": "^8.6.0",
-    "semantic-release": "^6.3.2"
+    "semantic-release": "^6.3.2",
+    "should": "^11.1.2",
+    "standard": "^8.6.0"
   }
 }
