--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "kinesis": "^1.2.2",
     "memorystream": "^0.3.1",
     "mkdirp": "^0.5.1",
-    "moment": "^2.17.0",
-    "underscore": "~1.8.3"
+    "moment": "^2.17.0"
   },
   "repository": {
     "type": "git",
@@ -34,8 +33,8 @@
     "istanbul": "^0.4.5",
     "istanbul-cobertura-badger": "^1.2.1",
     "jasmine": "^2.5.2",
-    "mocha": "^3.2.0",
-    "standard": "^8.6.0",
-    "semantic-release": "^8.2.0"
+    "mocha": "^5.2.0",
+    "semantic-release": "^8.2.0",
+    "standard": "^8.6.0"
   }
 }
