--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "moment": "^2.17.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
+    "chai": "4.0.0",
     "coveralls": "^3.0.1",
     "greenkeeper-postpublish": "^1.0.1",
     "jasmine": "^2.5.2",
@@ -50,6 +50,6 @@
     "mocha": "^5.2.0",
     "nyc": "^15.0.0",
     "prettier": "^1.13.6",
-    "standard": "^8.6.0"
+    "standard": "^14.3.0"
   }
 }
