--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "kinesis": "^1.2.2",
     "memorystream": "^0.3.1",
     "mkdirp": "^0.5.1",
-    "moment": "^2.17.0"
+    "moment": "^2.17.0",
+    "superagent": "^8.1.2"
   },
   "devDependencies": {
     "chai": "4.0.0",
